# qr

./: .gitignore  DESIGN.md  PRODUCT.md  README.ko.md  README.md  docker-compose.yml
.github/workflows/: docker-build.yml  gh-pages.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
docs/: url-query-params.md
frontend/: Dockerfile  app.js  index.html  nginx.conf  style.css
frontend/wasm/: package.json  wasm_qr.d.ts  wasm_qr.js  wasm_qr_bg.wasm  wasm_qr_bg.wasm.d.ts
wasm_qr/: Cargo.toml
wasm_qr/src/: lib.rs
