[package]
name = "wasm_qr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
qrcode = "0.14"
image = { version = "0.24", default-features = false, features = ["png"] }
console_error_panic_hook = { version = "0.1.7" }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "s"
lto = true
